fix: text contrast

--- a/css/index.css
+++ b/css/index.css
@@ -65,8 +65,9 @@ a {
 .accent {
   font-family: 'Proxima Bold';
   line-height: 14px;
-  color: #60A9F0;
+  color: #FFFFFF;
   line-height: 20px;
+  text-decoration: underline;
 }
 
 .bold {
